--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1434,14 +1434,19 @@ body.hero-page{
 
 .hero-title h1, .time-counter h1, .time-counter h2, .history-title h1, 
 .history-chart h2, .history-wrapper h3,
-.features-chart .features-chart-title h1, .characters-chart .contenedor-characters-title h1{
+.features-chart .features-chart-title h1, .characters-chart .contenedor-characters-title h1,
+.history-chart h1{
   font-family: 'Slackey', cursive;
   color: var(--Color-PrimaryL2);  
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
-  animation: heroTitleAnimation 2s ease-in-out infinite;
+  animation: heroTitleAnimation 2s ease-in-out;
 }
 
+@keyframes heroTitleAnimation {
+  0%{}
+  100%{}
+}
 
 .hero-title h1{
   transform: scale(1.1);
@@ -1450,7 +1455,7 @@ body.hero-page{
 }
 
 .hero-title h1, .characters-title{
-  margin:40px 0px;
+  margin: 20px 0px;
 }
 
 .hero-title h1{
@@ -1479,6 +1484,7 @@ body.hero-page{
 
 .contenedor-characters-title{
   text-align: center;
+  padding-top: 40px;
 }
 
 
@@ -1574,10 +1580,8 @@ body.hero-page{
   100%{
     /* transform: scale(.2); */
     opacity: 0;
-  }
-  
+  }  
 }
-
 
 .history-paragraph-animation{
   animation: parag-transition 3s ease;
@@ -1592,8 +1596,7 @@ body.hero-page{
   }
   100%{
     opacity: 0;
-  }
-  
+  }  
 }
 
 .history-scroll div{
@@ -1626,7 +1629,7 @@ body.hero-page{
 }
 
 .contenedor-hero-gameplay .contendor-cards-hero-gameplay .card-hero-gameplay{
-  background-image: url(../temp/35mm-old-movie-film-film-mockup-frame-background-free-photo.png);
+  background-image: url(../img/img-games/hero-section/back-gameplay-reel.png);
   background-size: cover;
 }
 
@@ -1662,12 +1665,10 @@ body.hero-page{
 
 @keyframes right-movement {
   0%{
-    transform: skew(-10deg);
-    transform-origin: left bottom;
+    transform: skew(-15deg);
   } 
   100%{
-    transform: skew(-10deg);
-    transform-origin: left bottom;
+    transform: skew(-15deg);
   }
 }
 
@@ -1677,12 +1678,10 @@ body.hero-page{
 
 @keyframes left-movement {
   0%{   
-    transform: skew(10deg);
-    transform-origin: left bottom;
+    transform: skew(15deg);
   }
   100%{
-    transform: skew(10deg);
-    transform-origin: left bottom;
+    transform: skew(15deg);
   }
 }
 
@@ -1916,9 +1915,9 @@ body.hero-page{
   height: 100%;
 }
 
-.features-chart .feature-text-a{
+/* .features-chart .feature-text-a{
   background-color: var(--Color-SecondaryS1);
-}
+} */
 
 .features-chart .feature-container-a .feature-text,
 .features-chart .feature-container-b .feature-text,
@@ -1933,6 +1932,16 @@ body.hero-page{
 .features-chart .feature-container-a .feature-title,
 .features-chart .feature-container-b .feature-title{
   margin-bottom: 20px;
+
+}
+.features-chart .feature-container-b .feature-title{
+  transform: translate(1000px, 100px);
+  opacity:0;
+}
+
+.features-chart .feature-container-a .feature-title{
+  transform: translate(-1000px, 100px);
+  opacity:0;
 }
 
 .features-chart .feature-container-a .feature-p,
@@ -1940,7 +1949,18 @@ body.hero-page{
   line-height: normal;
 }
 
-.container-features-1, .container-features-2{
+.features-chart .feature-container-a .feature-p{
+  transform: translate(-1000px, 100px);
+  opacity:0;
+}
+
+.features-chart .feature-container-b .feature-p{
+  transform: translate(1000px, 100px);
+  opacity:0;
+}
+
+.container-features-1, .container-features-2,
+.container-features-3{
   display: flex; 
 }
 
@@ -2060,8 +2080,8 @@ footer{
   position: absolute;
   width: 20px;
   height: 20px;
-  right: 12px;
-  top: 100%;
+  right: 35px;
+  top: 87%;
   transform: translateY(-50%);
 }
 
