--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1898,28 +1898,26 @@ body.hero-page{
   padding: 40px;
 }
 
-.features-chart .feature-container-a,
-.features-chart .feature-container-b{
+.feature-text{
   display: flex;
   width:550px;
   height: 200px;
   padding: 20px;
 }
 
-.features-chart .feature-container-b{
+.feature-text:nth-child(even){
   flex-direction: row-reverse;
 }
 
-.features-chart .feature-container-a img,
-.features-chart .feature-container-b img{
+.feature-img img{
   height: 100%;
 }
 
-/* .features-chart .feature-text-a{
-  background-color: var(--Color-SecondaryS1);
-} */
+.feature-text p{
+  line-height: normal;
+}
 
-.features-chart .feature-container-a .feature-text,
+/* .features-chart .feature-container-a .feature-text,
 .features-chart .feature-container-b .feature-text,
 .features-chart .feature-container-a .feature-text-a,
 .features-chart .feature-container-b .feature-text-a{
@@ -1927,14 +1925,14 @@ body.hero-page{
   flex-direction: column;
   justify-content: center;
   padding: 20px;
-}
-
+} */
+/* 
 .features-chart .feature-container-a .feature-title,
 .features-chart .feature-container-b .feature-title{
   margin-bottom: 20px;
 
-}
-.features-chart .feature-container-b .feature-title{
+} */
+/* .features-chart .feature-container-b .feature-title{
   transform: translate(1000px, 100px);
   opacity:0;
 }
@@ -1942,14 +1940,14 @@ body.hero-page{
 .features-chart .feature-container-a .feature-title{
   transform: translate(-1000px, 100px);
   opacity:0;
-}
-
+} */
+/* 
 .features-chart .feature-container-a .feature-p,
 .features-chart .feature-container-b .feature-p{
   line-height: normal;
-}
+} */
 
-.features-chart .feature-container-a .feature-p{
+/* .features-chart .feature-container-a .feature-p{
   transform: translate(-1000px, 100px);
   opacity:0;
 }
@@ -1957,16 +1955,16 @@ body.hero-page{
 .features-chart .feature-container-b .feature-p{
   transform: translate(1000px, 100px);
   opacity:0;
-}
+} */
 
-.container-features-1, .container-features-2,
+/* .container-features-1, .container-features-2,
 .container-features-3{
   display: flex; 
 }
 
 .container-features-2{
   flex-wrap: nowrap;
-}
+} */
 
 /*---------------------SPRITE SHEET--------------------------------*/
 
