--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -12,6 +12,7 @@
 }
 
 :root {
+  scroll-behavior: smooth;
   --Font-Type: 'Inter';
   --Font-Weight-Light: 300;
   --Font-Weight-Bold: 700;
@@ -148,12 +149,12 @@ body {
   color: var(--Color-GreyS3);
 }
 
-::-webkit-scrollbar {display: none;}
+/* ::-webkit-scrollbar {display: none;} */
 
 /*GRID*/
 body{
   display: grid;
-  overflow: hidden;
+  /* overflow: hidden; */
   grid-template-columns: 10% 80% 10%;
   justify-content: center;
   grid-template-rows: repeat(4, auto);
@@ -1515,10 +1516,6 @@ body.hero-page{
   background-repeat: round;
 }
 
-.features-chart{
-  background-color: var(--Color-GreyS3);
-}
-
 .history-text
 {
   width: 1148px;
@@ -1891,7 +1888,11 @@ body.hero-page{
     background: var(--Color-Primary);
 }
 
+/* ------------------------------FEATURES------------------------------ */
 .features-chart{
+  scroll-behavior: smooth;
+  background-color: var(--Color-GreyS3);
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1906,6 +1907,7 @@ body.hero-page{
   display: flex;
   align-items: center;
   margin: 20px;
+  height: 100vh;
 }
 
 .feature:nth-child(even){
@@ -1917,14 +1919,32 @@ body.hero-page{
   width: 300px;
 }
 
-.feature p{
+.feature-text p{
   margin: 10px 0px;
   line-height: normal;
+  /* transform: translate(100vw, 100vh); */
+}
+
+.feature:nth-child(odd) .feature-text p{
+  /* transform: translate(-100vw, 100vh); */
+}
+
+.feature-text h3{
+  /* transform: translate(100vw, -100vh); */
+}
+
+.feature:nth-child(odd) .feature-text h3{
+  /* transform: translate(-100vw, -100vh); */
 }
 
 .feature-img{
   width: 100%;
   margin: 0px 20px;
+  /* transform: translate(-100vw, 0vh); */
+}
+
+.feature:nth-child(odd) .feature-img{
+  /* transform: translate(100vw, 0vh); */
 }
 
 .feature-img img{
