--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1520,6 +1520,71 @@ body.hero-page{
 .side-column{
   width: 370px;
 }
+
+#scroll-button span {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  width: 30px;
+  height: 50px;
+  margin-left: -15px;
+  border: 3px solid var(--Color-GreyL3);
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+
+#scroll-button span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: var(--Color-GreyL3);
+  border-radius: 100%;
+  -webkit-animation: sbutton 2s infinite;
+  animation: sbutton 2s infinite;
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes sbutton {
+  0% {
+    -webkit-transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sbutton {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+
 /*--------------------HISTORY SECTION-------------------------*/
 .history-chart{
   display: flex;
