--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1439,7 +1439,7 @@ body.hero-page{
 .hero-count-reserve{
   display: flex;
   align-items: flex-end;  
-  padding: 0px 20px;
+  padding: 0px 20px 40px 20px;
   height: 500px;
 }
 
@@ -1460,7 +1460,7 @@ body.hero-page{
   word-spacing: 5px;  
 }
 
-.hero-title h1, .characters-title{
+.hero-title, .characters-title{
   margin: 20px 0px;
 }
 
@@ -1523,7 +1523,7 @@ body.hero-page{
 
 #scroll-button span {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
   left: 50%;
   width: 30px;
   height: 50px;
@@ -1766,7 +1766,7 @@ body.hero-page{
 /*-----------------CHARACTERS SECTION---------------------*/
 
 .characters-chart{ 
-    margin: 60px auto;
+    margin: 60px 0px 0px 0px;
     background-color: var(--Color-GreyS3);
 }
 
@@ -1961,7 +1961,7 @@ body.hero-page{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 0px 40px;
 }
 
 .features-chart h1{
