--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -145,12 +145,6 @@ body, input, textarea, button{
 
 /* ::-webkit-scrollbar {display: none;} */
 
-body::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
-  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
-  border-radius: 100px;
-}
-
 /*GRID*/
 body{
   margin:0;
@@ -181,7 +175,7 @@ body{
   width: 100vw;
   height: 100vh;
   position: absolute;
-  background:/*  rgba(0, 0, 0, 0.90); */ var(--Color-GreyL2);
+  background: var(--Color-GreyL2);
   display: flex;
   z-index: 5000;
 }
@@ -1440,7 +1434,7 @@ body.hero-page{
   display: flex;
   align-items: flex-end;  
   padding: 0px 20px 40px 20px;
-  height: 500px;
+  height: 480px;
 }
 
 .hero-title h1, .time-counter h1, .time-counter h2, .history-title h1, 
@@ -1448,7 +1442,7 @@ body.hero-page{
 .features-chart h1, .characters-chart .contenedor-characters-title h1,
 .history-chart h1{
   font-family: 'Slackey', cursive;
-  color: var(--Color-PrimaryL2);  
+  color: var(--Color-PrimaryL1);  
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
@@ -1595,11 +1589,11 @@ body.hero-page{
 }
 
 .history-chart{
-  --opacidad-negro: 0.8;
+  --opacidad-negro: 0.9;
   background-image: linear-gradient(rgba(0, 0, 0,var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(../img/img-games/hero-section/hero-history-6.png);  
-  background-size: cover;
   background-attachment: fixed;
-  background-repeat: round;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .history-text
@@ -2049,7 +2043,7 @@ footer{
 .contenedor-ppal-footer{
   display: flex;
   justify-content: space-between;
-  padding: 20px 80px 20px 80px;
+  padding: 20px 10vw;
   background: --var(--Color-PrimaryS1);
   margin-top: 35px;
 }
@@ -2064,6 +2058,9 @@ footer{
   width: 306px;
   height: 218px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contenedor-ppal-footer .cont-redes .icons-redes-footer{
